[package]
name = "balls"
version = "1.1.0"
edition = "2021"
authors = ["Sandra"]
repository = "https://github.com/an-Iceberg/balls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
egui = "0.22.0"
egui-macroquad = "0.15.0"
rand = "0.8.5"
